[tool.poetry]
name = "homework-10-2"
version = "0.1.0"
description = ""
authors = ["mishchuk <mishchuksg@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_10"}]

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
